--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -20,6 +20,7 @@
             <div class="content-body">
                 <div>Idea to delete previous history</div>
                 <div>Idea to delete previous history1</div>
+                <div> Change in master branch</div>
 
                 <div class="success-text">Success!</div>
                 <div class="description line-1"> Azure DevOps Project has been successfully setup</div>
