--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -20,7 +20,7 @@
             <div class="content-body">
                 <div>Idea to delete previous history</div>
                 <div>Idea to delete previous history1</div>
-
+                <div>Chnages done in Feature branch</div>
                 <div class="success-text">Success!</div>
                 <div class="description line-1"> Azure DevOps Project has been successfully setup</div>
                 <div class="description line-2"> Your HTML app is up and running on Azure</div>
